[package]
name = "honey-badger"
version = "1.0.1"
edition = "2021"

[dependencies]
base64 = "0.21.0"
bdk = { version = "0.26.0", features = ["keys-bip39"] }
graphql_client = { version = "0.12.0", features = ["reqwest-blocking"]}
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"]}
secp256k1 = { version = "0.24.3", features = ["global-context"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

perro = {git = "https://github.com/getlipa/perro", tag = "v1.0.0" }

[dev-dependencies]
ctor = "0.1.26"
simplelog = { version ="0.12.0", features = ["test"] }