[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
chrono = { version = "0.4.24", default-features = false }

graphql = { path = "../graphql" }
honey-badger = { path = "../honey-badger" }

[dev-dependencies]
bitcoin = { version = "0.29.2" }
ctor = "0.2.0"
simplelog = { version ="0.12.0", features = ["test"] }
