[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
graphql_client = { version = "0.13.0", features = ["reqwest-blocking", "reqwest"]}
log = "0.4.17"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"]}

perro = {git = "https://github.com/getlipa/perro", tag = "v1.1.0" }
