[package]
name = "honey-badger"
version = "1.0.1"
edition = "2021"

[dependencies]
base64 = "0.21.0"
bdk = { version = "0.27.0", features = ["keys-bip39"] }
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
log = "0.4.17"
# Explicitly depend on miniscript to fix the issue with bdk dependency:
# https://github.com/getlipa/lipa-lightning-lib/actions/runs/4433040618/jobs/7777705537
miniscript = { version = "9", features = ["serde"] }
rand = "0.8.5"
secp256k1 = { version = "0.27.0", features = ["global-context"] }
serde_json = "1.0"

graphql = { path = "../graphql" }

[dev-dependencies]
ctor = "0.1.26"
simplelog = { version ="0.12.0", features = ["test"] }
