[package]
name = "honey-badger"
version = "1.0.1"
edition = "2021"

[dependencies]
base64 = "0.21.0"
bdk = { version = "0.29.0", features = ["keys-bip39"] }
log = "0.4.17"
rand = "0.8.5"
secp256k1 = { version = "0.24.3", features = ["global-context"] }
serde_json = "1.0"

graphql = { path = "../graphql" }

[dev-dependencies]
ctor = "0.2.0"
simplelog = { version ="0.12.0", features = ["test"] }
