[package]
name = "mole"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
log = "0.4.17"

graphql = { path = "../graphql" }
honey-badger = { path = "../honey-badger" }

[dev-dependencies]
bitcoin = { version = "0.30.1" }
ctor = "0.2.0"
rand = "0.8.5"
simplelog = { version ="0.12.0", features = ["test"] }
serial_test = "2.0.0"
