[package]
name = "pigeon"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql = { path = "../graphql" }
honeybadger = { path = "../honeybadger" }

[dev-dependencies]
bitcoin = { version = "0.32.2" }
ctor = "0.2.0"
simplelog = { version ="0.12.0", features = ["test"] }
tokio = { version = "1.32.0" }
