[package]
name = "squirrel"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"

graphql = { path = "../graphql" }
honey-badger = { path = "../honey-badger" }
bdk = { version = "0.29.0", features = ["keys-bip39"] }

[dev-dependencies]
bitcoin = { version = "0.31.2" }
ctor = "0.2.0"
rand = "0.8.5"
simplelog = { version ="0.12.0", features = ["test"] }
tokio = { version = "1.32.0" }
